--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -1715,7 +1715,7 @@ msxturbor:
   manufacturer: Microsoft
   release: 1990
   hardware: computer
-  extensions: [dsk, mx2, rom, zip, 7z, openmsx]
+  extensions: [dsk, mx2, rom, zip, 7z, openmsx, m3u]
   platform:   msx
   group:      msx
   emulators:
