--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -9428,6 +9428,12 @@ wine:
             choices:
                 "Off": 0
                 "On":  1
+        enable_rootdrive:
+            prompt:      ENABLE ROOT DRIVE
+            description: Use Z drive for root directory
+            choices:
+                "Off": 0
+                "On":  1
         dxvk:
             group: ADVANCED OPTIONS
             prompt:      DXVK FEATURE
