--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -9389,6 +9389,10 @@ wine:
   features: [padtokeyboard]
   shared: [videomode]
   cfeatures:
+        bootup:
+            prompt:      BOOTUP
+            description: Replace autorun.cmd from boot/*.cmd (or boot/default.cmd)
+            preset: input
         lang:
             prompt:      LANGUAGE
             description: Change the game's language.
