autorun.cmd 差し替え設定

--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -10043,6 +10043,10 @@ wine:
             choices:
                 "Off":          0
                 "On (Default)": 1
+        bootup:
+            prompt:      BOOTUP
+            description: Replace autorun.cmd from boot/*.cmd (or boot/default.cmd)
+            preset: input
         dxvk:
             group: ADVANCED OPTIONS
             prompt:      DXVK FEATURE
