--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -8358,65 +8358,27 @@ wine:
   shared: [videomode]
   cfeatures:
         bootup:
-            group: ADVANCED OPTIONS
-            prompt:      BOOTUP WAY
-            description: Select the game's bootup way.
-            choices:
-                "Game":   "game"
-                "Config":   "config"
-                "Option":   "option"
-                "Edit":   "edit"
-                "Help":   "help"
-                "Appendix":   "appendix"
-                "Maintenance":   "maintenance"
-        lang:
-            group: ADVANCED OPTIONS
-            prompt:      LANGUAGE
-            description: Change the game's language.
-            choices:
-                "Arabic":   "ar"
-                "Catalan":   "ca"
-                "Czech":   "cs_CZ"
-                "Welsh":   "cy_GB"
-                "German":   "de"
-                "Greek":   "el"
-                "BritishEnglish":   "en_GB"
-                "American English":   "en_US"
-                "Spanish":   "es"
-                "Mexican Spanish":   "es_MX"
-                "French":   "fr"
-                "Hebrew":   "he"
-                "Hungarian":   "hu"
-                "Italian":   "it"
-                "Japanese":   "ja_JP"
-                "Korean":   "ko"
-                "Norwegian bokmal":   "nb_NO"
-                "Dutch":   "nl"
-                "Norwegian nynorsk":   "nn_NO"
-                "Occitan":   "oc_FR"
-                "Polish":   "pl"
-                "Brazilian Portuguese":   "pt_BR"
-                "Portuguese":   "pt_PT"
-                "Russian":   "ru_RU"
-                "Swedish":   "sv_SE"
-                "Turkish":   "tr"
-                "Ukrainian":   "uk_UA"
-                "Simplified Chinese":   "zh_CN"
-                "Traditional Chinese":   "zh_TW"
+            prompt:      BOOTUP
+            description: Replace autorun.cmd from boot/*.cmd (or boot/default.cmd)
+            preset: input
         enable_gamepad:
-            group: ADVANCED OPTIONS
             prompt:      ENABLE GAMEPAD
-            description: Use gamepad by Windows
+            description: Use gamepad detected via Wine (PadToKey always enabled)
             choices:
                 "Off": 0
                 "On":  1
-        gamedrive:
-            group: ADVANCED OPTIONS
-            prompt:      USE GAME SPECIFIC DRIVE
-            description: "Game directory as Y:"
+        enable_rootdrive:
+            prompt:      ENABLE ROOT DRIVE
+            description: Use Z drive for root directory
             choices:
-                "Off": ""
-                "On":  "y"
+                "Off": 0
+                "On":  1
+        winepoint_each_core:
+            prompt:      WINEPOINT EACH CORE
+            description: Creating Winepoint each cores.
+            choices:
+                "Off": 0
+                "On":  1
         dxvk:
             group: ADVANCED OPTIONS
             prompt:      DXVK FEATURE
