--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -7840,42 +7840,25 @@ wine:
   features: [padtokeyboard]
   shared: [videomode]
   cfeatures:
-        lang:
-            prompt:      LANGUAGE
-            description: Change the game's language.
-            choices:
-                "Arabic":   "ar"
-                "Catalan":   "ca"
-                "Czech":   "cs_CZ"
-                "Welsh":   "cy_GB"
-                "German":   "de"
-                "Greek":   "el"
-                "British English":   "en_GB"
-                "American English":   "en_US"
-                "Spanish":   "es"
-                "Mexican Spanish":   "es_MX"
-                "French":   "fr"
-                "Hebrew":   "he"
-                "Hungarian":   "hu"
-                "Italian":   "it"
-                "Japanese":   "ja_JP"
-                "Korean":   "ko"
-                "Norwegian bokmal":   "nb_NO"
-                "Dutch":   "nl"
-                "Norwegian nynorsk":   "nn_NO"
-                "Occitan":   "oc_FR"
-                "Polish":   "pl"
-                "Brazilian Portuguese":   "pt_BR"
-                "Portuguese":   "pt_PT"
-                "Russian":   "ru_RU"
-                "Swedish":   "sv_SE"
-                "Turkish":   "tr"
-                "Ukrainian":   "uk_UA"
-                "Simplified Chinese":   "zh_CN"
-                "Traditional Chinese":   "zh_TW"
+        bootup:
+            prompt:      BOOTUP
+            description: Replace autorun.cmd from boot/*.cmd (or boot/default.cmd)
+            preset: input
         enable_gamepad:
             prompt:      ENABLE GAMEPAD
-            description: Use gamepad detected via Batocera (detected via Wine always enabled)
+            description: Use gamepad detected via Wine (PadToKey always enabled)
+            choices:
+                "Off": 0
+                "On":  1
+        enable_rootdrive:
+            prompt:      ENABLE ROOT DRIVE
+            description: Use Z drive for root directory
+            choices:
+                "Off": 0
+                "On":  1
+        winepoint_each_core:
+            prompt:      WINEPOINT EACH CORE
+            description: Creating Winepoint each cores.
             choices:
                 "Off": 0
                 "On":  1
