--- a/package/batocera/core/batocera-triggerhappy/conf/multimedia_keys_disabled.conf
+++ b/package/batocera/core/batocera-triggerhappy/conf/multimedia_keys_disabled.conf
@@ -1,4 +1,5 @@
 KEY_POWER       1               batocera-shutdown 1
 KEY_POWER       0               batocera-shutdown 0
+KEY_F2          1               /usr/bin/batocera-info --short | HOME=/userdata/system XAUTHORITY=/var/lib/.Xauthority DISPLAY=:0.0 osd_cat -f -*-*-bold-*-*-*-38-120-*-*-*-*-*-* -cred -s 3 -d 4
 KEY_F10+KEY_LEFTCTRL+KEY_LEFTALT 1 /etc/init.d/S31emulationstation stop
 KEY_F11+KEY_LEFTCTRL+KEY_LEFTALT 1 chvt 1
