--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -9,7 +9,7 @@ default:
     smooth:             true
     shaderset:          sharp-bilinear-simple
     rewind:             false
-    bezel:              consoles
+    bezel:              none
     forceNoBezel:       false
     gamemode_enable:    false
 
