--- a/package/batocera/core/batocera-system/batocera.conf
+++ b/package/batocera/core/batocera-system/batocera.conf
@@ -37,7 +37,7 @@
 #system.es.menu=default
 
 ## Show or hide Kodi in the EmulationStation menu.
-kodi.enabled=1
+kodi.enabled=0
 ## Start Kodi at launch.
 kodi.atstartup=0
 ## Enable the North button Kodi shortcut.
@@ -265,7 +265,7 @@ updates.type=stable
 
 ## Decoration set
 ## See https://wiki.batocera.org/decoration
-#global.bezel=default
+global.bezel=none
 
 ## Game aspect ratio
 ## Set the ratio for emulators.
