my default config

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -2,17 +2,16 @@ default:
   emulator:
   core:
   options:
-    hud_support:        true
-    videomode:          default
-    ratio:              auto
-    video_threaded:     false
-    smooth:             true
-    shaderset:          sharp-bilinear-simple
-    rewind:             false
-    bezel:              consoles
-    forceNoBezel:       false
+    hud_support:    true
+    videomode:      default
+    ratio:          core
+    video_threaded: false
+    smooth:         true
+    shaderset:      sharp-bilinear-simple
+    rewind:         false
+    bezel:          none
+    forceNoBezel:   false
     gamemode_enable:    false
-
 # 0-C
 
 3do:
