my default system settings

--- a/package/batocera/core/batocera-system/batocera.conf
+++ b/package/batocera/core/batocera-system/batocera.conf
@@ -37,7 +37,7 @@
 #system.es.menu=default
 
 ## Show or hide Kodi in the EmulationStation menu.
-kodi.enabled=1
+kodi.enabled=0
 ## Start Kodi at launch.
 kodi.atstartup=0
 ## Enable the North button Kodi shortcut.
@@ -216,7 +216,7 @@ controllers.gamecon.args=map=1
 
 ## Set the local time zone
 ## To view all available time zones, run: ls /usr/share/zoneinfo/
-#system.timezone=Europe/Paris
+system.timezone=Etc/UTC
 
 
 # ------------ G - Updates ------------ #
@@ -265,11 +265,11 @@ updates.type=stable
 
 ## Decoration set
 ## See https://wiki.batocera.org/decoration
-#global.bezel=default
+global.bezel=none
 
 ## Game aspect ratio
 ## Set the ratio for emulators.
-#global.ratio=auto
+global.ratio=core
 
 ## Smooth games (bilinear filtering)
 ## Softens the image. Is overidden if using a shader set.
