portable → handheld creative → subsystem

--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -251,7 +251,7 @@ gba:
   name:       Game Boy Advance
   manufacturer: Nintendo
   release: 2001
-  hardware: portable
+  hardware: handheld
   extensions: [gba, zip, 7z]
   emulators:
     libretro:
@@ -269,7 +269,7 @@ gbc:
   name:       Game Boy Color
   manufacturer: Nintendo
   release: 1998
-  hardware: portable
+  hardware: handheld
   extensions: [gbc, zip, 7z]
   emulators:
     libretro:
@@ -288,7 +288,7 @@ gb:
   name:       Game Boy
   manufacturer: Nintendo
   release: 1989
-  hardware: portable
+  hardware: handheld
   extensions: [gb, zip, 7z]
   emulators:
     libretro:
@@ -319,7 +319,7 @@ gbc2players:
   name:       Game Boy Color (2 players)
   manufacturer: Nintendo
   release: 1998
-  hardware: portable
+  hardware: handheld
   extensions: [gbc, gb2, gbc2, zip, 7z]
   platform:   gbc
   emulators:
@@ -336,7 +336,7 @@ gb2players:
   name:       Game Boy (2 players)
   manufacturer: Nintendo
   release: 1989
-  hardware: portable
+  hardware: handheld
   extensions: [gb, gb2, gbc2, zip, 7z]
   platform:   gb
   emulators:
@@ -353,7 +353,7 @@ nds:
   name:       Nintendo DS
   manufacturer: Nintendo
   release: 2004
-  hardware: portable
+  hardware: handheld
   extensions: [nds, bin, zip, 7z]
   emulators:
     libretro:
@@ -391,7 +391,7 @@ lcdgames:
   name:       LCD Games
   manufacturer: Various
   release: 1979
-  hardware: portable
+  hardware: handheld
   extensions: [mgw, zip, 7z]
   group:      lcdgames
   emulators:
@@ -404,7 +404,7 @@ gameandwatch:
   name:       Game and Watch
   manufacturer: Nintendo
   release: 1980
-  hardware: portable
+  hardware: handheld
   extensions: [mgw, zip, 7z]
   group:      lcdgames
   emulators:
@@ -556,7 +556,7 @@ gamegear:
   name:       Game Gear
   manufacturer: Sega
   release: 1990
-  hardware: portable
+  hardware: handheld
   extensions: [bin, gg, zip, 7z]
   emulators:
     libretro:
@@ -594,7 +594,7 @@ psp:
   name:       PlayStation Portable
   manufacturer: Sony
   release: 2004
-  hardware: portable
+  hardware: handheld
   extensions: [iso, cso, pbp]
   emulators:
     ppsspp:
@@ -675,7 +675,7 @@ scummvm:
   name:       ScummVM
   manufacturer: LucasArts
   release: 1987
-  hardware: computer
+  hardware: subsystem
   extensions: [scummvm, squashfs]
   platform:   pc
   emulators:
@@ -1098,7 +1098,7 @@ lynx:
   name:       Atari Lynx
   manufacturer: Atari
   release: 1989
-  hardware: portable
+  hardware: handheld
   extensions: [lnx, zip, 7z]
   theme:      atarilynx
   platform:   atarilynx
@@ -1111,7 +1111,7 @@ ngp:
   name:       Neo-Geo Pocket
   manufacturer: SNK
   release: 1998
-  hardware: portable
+  hardware: handheld
   extensions: [ngp, zip, 7z]
   emulators:
     libretro:
@@ -1121,7 +1121,7 @@ ngpc:
   name:       Neo-Geo Pocket Color
   manufacturer: SNK
   release: 1999
-  hardware: portable
+  hardware: handheld
   extensions: [ngc, zip, 7z]
   emulators:
     libretro:
@@ -1131,7 +1131,7 @@ wswan:
   name:       WonderSwan
   manufacturer: Bandai
   release: 1999
-  hardware: portable
+  hardware: handheld
   extensions: [ws, zip, 7z]
   theme:      wonderswan
   platform:   wonderswan
@@ -1143,7 +1143,7 @@ wswanc:
   name:       WonderSwan Color
   manufacturer: Bandai
   release: 2000
-  hardware: portable
+  hardware: handheld
   extensions: [wsc, zip, 7z]
   theme:      wonderswancolor
   platform:   wonderswancolor
@@ -1224,7 +1224,7 @@ tic80:
   name:       TIC-80
   manufacturer: Fantasy
   release: 2016
-  hardware: console
+  hardware: subsystem
   extensions: [tic]
   emulators:
     libretro:
@@ -1240,7 +1240,7 @@ pico8:
   name:       Pico-8
   manufacturer: Fantasy
   release: 2015
-  hardware: console
+  hardware: subsystem
   extensions: [p8, png, m3u]
   emulators:
     libretro:
@@ -1865,7 +1865,7 @@ moonlight:
   name:       Moonlight Embedded
   manufacturer: Misc. System
   release:
-  hardware: system
+  hardware: subsystem
   extensions: [moonlight]
   emulators:
     moonlight:
@@ -2096,7 +2096,7 @@ x1:
   name:       3DS
   manufacturer: Nintendo
   release: 2011
-  hardware: portable
+  hardware: handheld
   extensions: [3ds, 3dsx, cxi, axf, elf]
   emulators:
     citra:
@@ -2150,7 +2150,7 @@ pokemini:
   name:       Pokemon Mini
   manufacturer: Nintendo
   release: 2001
-  hardware: portable
+  hardware: handheld
   extensions: [min, zip, 7z]
   emulators:
     libretro:
@@ -2385,7 +2385,7 @@ solarus:
   name:       Solarus
   manufacturer: Solarus Team
   release: 2011
-  hardware: port
+  hardware: subsystem
   extensions: [zip, solarus]
   emulators:
     solarus:
@@ -2395,7 +2395,7 @@ easyrpg:
   name:       EasyRPG
   manufacturer: EasyRPG Team
   release: 2000
-  hardware: port
+  hardware: subsystem
   extensions: [easyrpg, squashfs, zip]
   emulators:
     easyrpg:
@@ -2440,7 +2440,7 @@ pygame:
   name:       Pygame
   manufacturer: Pygame Team
   release: 2000
-  hardware: library
+  hardware: subsystem
   extensions: [pygame]
   platform:   pygame
   theme:      pygame
@@ -2627,7 +2627,7 @@ flash:
   name:       Flash Player
   manufacturer: Adobe
   release: 1996
-  hardware: port
+  hardware: subsystem
   extensions: [swf]
   emulators:
     lightspark:
@@ -2653,7 +2653,7 @@ xbox:
 
 flatpak:
   name: Applications
-  manufacturer:
+  manufacturer: Ports
   release:
   hardware:
   extensions: [flatpak]
@@ -2706,7 +2706,7 @@ supervision:
   name:       Supervision
   manufacturer: Watara
   release: 1992
-  hardware: portable
+  hardware: handheld
   extensions: [sv, zip, 7z]
   emulators:
     libretro:
@@ -3021,7 +3021,7 @@ megaduck:
   name:       Mega Duck / Cougar Boy
   manufacturer: Welback Holdings
   release: 1993
-  hardware: portable
+  hardware: handheld
   extensions:  [bin, zip, 7z]
   emulators:
     libretro:
@@ -3046,7 +3046,7 @@ gamate:
   name:       Gamate
   manufacturer: Bitcorp
   release: 1990
-  hardware: portable
+  hardware: handheld
   extensions: [bin, zip, 7z]
   emulators:
     libretro:
@@ -3147,7 +3147,7 @@ gamecom:
   name:       Game.com
   manufacturer: Tiger Electronics
   release: 1997
-  hardware: portable
+  hardware: handheld
   extensions: [bin, tgc, zip, 7z]
   emulators:
     libretro:
@@ -3163,7 +3163,7 @@ gamepock:
   name:       Game Pocket Computer
   manufacturer: Epoch
   release: 1984
-  hardware: portable
+  hardware: handheld
   extensions: [bin, zip, 7z]
   emulators:
     libretro:
@@ -3339,7 +3339,7 @@ gmaster:
   name:       Game Master
   manufacturer: Hartung
   release: 1990
-  hardware: portable
+  hardware: handheld
   extensions: [bin, zip, 7z]
   emulators:
     libretro:
@@ -3508,7 +3508,7 @@ j2me:
   name:       Java 2 MicroEdition
   manufacturer: Sun
   release: 2001
-  hardware: portable
+  hardware: handheld
   extensions: [jar]
   emulators:
     libretro:
